--- a/traffic.html
+++ b/traffic.html
@@ -125,25 +125,25 @@
 
 var addressPoints = [
             [0, 17.445434, 78.352301, 23, 94, 10, 43, 31, 1, 5, 3, "VehicularCount.mp4"],
-            [1, 17.395699, 78.431459, 30, 114, 5, 39, 30, 5, 4, 3, "VehicularCount1.mp4"],
-            [2, 17.443055, 78.498159, 35, 105, 11, 49, 13, 0, 1, 1, "VehicularCount2.mp4"],
-            [3, 17.495721, 78.395015, 45, 101, 25, 48, 23, 2, 6, 2, "VehicularCount3.mp4"],
-            [4, 17.368839, 78.518911, 31, 120, 8, 42, 25, 1, 7, 1, "VehicularCount1.mp4"],
+            [1, 17.395699, 78.431459, 30, 114, 5, 39, 30, 5, 4, 3, "VehicularCount.mp4"],
+            [2, 17.443055, 78.498159, 35, 105, 11, 49, 13, 0, 1, 1, "VehicularCount.mp4"],
+            [3, 17.495721, 78.395015, 45, 101, 25, 48, 23, 2, 6, 2, "VehicularCount.mp4"],
+            [4, 17.368839, 78.518911, 31, 120, 8, 42, 25, 1, 7, 1, "VehicularCount.mp4"],
             [5, 17.347503, 78.551417, 36, 140, 17, 41, 26, 1, 8, 2, "VehicularCount.mp4"],
-            [6, 17.407503, 78.411417, 30, 160, 19, 42, 29, 1, 9, 1, "VehicularCount2.mp4"],
-            [7, 17.415434, 78.452301, 20, 141, 10, 33, 33, 4, 10, 0, "VehicularCount3.mp4"],
+            [6, 17.407503, 78.411417, 30, 160, 19, 42, 29, 1, 9, 1, "VehicularCount.mp4"],
+            [7, 17.415434, 78.452301, 20, 141, 10, 33, 33, 4, 10, 0, "VehicularCount.mp4"],
             [8, 17.405699, 78.461459, 25, 110, 5, 30, 36, 3, 11, 1, "VehicularCount.mp4"],
-            [9, 17.383055, 78.498159, 30, 94, 4, 39, 39, 2, 17, 2, "VehicularCount1.mp4"],
-            [10, 17.365721, 78.465015, 40, 84, 3, 41, 31, 1, 16, 1, "VehicularCount2.mp4"],
-            [11, 17.398839, 78.358911, 12, 124, 23, 43, 36, 1, 15, 0, "VehicularCount3.mp4"],
-            [12, 17.403055, 78.498159, 24, 134, 13, 23, 37, 2, 15, 1, "VehicularCount1.mp4"],
-            [13, 17.425721, 78.45015, 19, 103, 14, 25, 31, 3, 19, 2, "VehicularCount2.mp4"],
-            [14, 17.438839, 78.398911, 18, 134, 19, 24, 30, 4, 13, 1, "VehicularCount3.mp4"],
-            [15, 17.437503, 78.401417, 30, 150, 17, 21, 31, 6, 12, 1, "VehicularCount3.mp4"],
-            [16, 17.435434, 78.372301, 25, 104, 16, 10, 35, 1, 11, 0, "VehicularCount2.mp4"],
+            [9, 17.383055, 78.498159, 30, 94, 4, 39, 39, 2, 17, 2, "VehicularCount.mp4"],
+            [10, 17.365721, 78.465015, 40, 84, 3, 41, 31, 1, 16, 1, "VehicularCount.mp4"],
+            [11, 17.398839, 78.358911, 12, 124, 23, 43, 36, 1, 15, 0, "VehicularCount.mp4"],
+            [12, 17.403055, 78.498159, 24, 134, 13, 23, 37, 2, 15, 1, "VehicularCount.mp4"],
+            [13, 17.425721, 78.45015, 19, 103, 14, 25, 31, 3, 19, 2, "VehicularCount.mp4"],
+            [14, 17.438839, 78.398911, 18, 134, 19, 24, 30, 4, 13, 1, "VehicularCount.mp4"],
+            [15, 17.437503, 78.401417, 30, 150, 17, 21, 31, 6, 12, 1, "VehicularCount.mp4"],
+            [16, 17.435434, 78.372301, 25, 104, 16, 10, 35, 1, 11, 0, "VehicularCount.mp4"],
             [17, 17.435699, 78.361459, 37, 114, 11, 11, 31, 0, 10, 2, "VehicularCount.mp4"],
-            [18, 17.43055, 78.358159, 23, 74, 13, 43, 32, 1, 15,0 , "VehicularCount1.mp4"],
-            [19, 17.495721, 78.355015, 20, 44, 20, 23, 31, 3, 16, 1, "VehicularCount2.mp4"],
+            [18, 17.43055, 78.358159, 23, 74, 13, 43, 32, 1, 15,0 , "VehicularCount.mp4"],
+            [19, 17.495721, 78.355015, 20, 44, 20, 23, 31, 3, 16, 1, "VehicularCount.mp4"],
             [20, 17.328839, 78.438911, 40, 74, 30, 13, 31, 2, 18, 2, "VehicularCount.mp4"],
             
         ];
