--- a/traffic.html
+++ b/traffic.html
@@ -39,7 +39,8 @@
       }
 
       .violation-bind-label {
-    color:#EB0000;
+     background-color: #00F;
+    color:#FFF;
 }
             .popup span {
                 font-weight: bold;
@@ -187,7 +188,7 @@ var addressPoints = [
 
         var map = tomtom.L.map('map', {
             source: ['vector', 'raster'],
-            zoom: 15,
+            zoom: 8,
             maxZoom: 18,
             basePath: '/sdk',
             minZoom: 5,
