--- a/traffic.html
+++ b/traffic.html
@@ -11,30 +11,33 @@
         <script type='text/javascript' src='sdk/tomtom.min.js'></script>
         <style>
            .circle {
-                width: 42px;
-                height: 42px;
-                line-height: 42px;
-                background-color: #EB0000;
+                width: 18px;
+                height: 18px;
+                line-height: 18px;
+                background-color: #00F;
                 border-radius: 50%;
                 display: inline-block;
                 text-align: center;
+                color:#FFF;
+                 font-weight: bold;
 
             }
             .mycluster {
             width: 46px;
             height: 46px;
             background-color: transparent;
-            text-align: center;
+            /*text-align: center;*/
             font-size: 20px;
+           
         }
         .map-container {
         padding: 6px;
-        border-width: 1px;
+        border-width: 2px;
         border-style: solid;
-        border-color: #ccc #ccc #999 #ccc;
-        -webkit-box-shadow: rgba(235, 0, 0, 1) 0 2px 5px;
-        -moz-box-shadow: rgba(235, 0, 0, 1) 0 2px 5px;
-        box-shadow: rgba(235, 0, 0, 1) 0 2px 5px;
+        border-color: #FFF #FFF #FFF #FFF;
+        -webkit-box-shadow: rgba(235, 255, 255, 1) 0 2px 5px;
+        -moz-box-shadow: rgba(235, 255, 255, 1) 0 2px 5px;
+        box-shadow: rgba(235, 255, 255, 1) 0 2px 5px;
         width: 600px;
       }
 
@@ -43,6 +46,7 @@
     color:#FFF;
     font-size: 12px;
      padding: 2px;
+     font-weight: bold;
 }
             .popup span {
                 font-weight: bold;
@@ -326,7 +330,7 @@ var markersclus = tomtom.L.markerClusterGroup({
                 }
                 var html = '<div class="circle"> <span>' + n + ' </span></div>';
 
-                return L.divIcon({ html: html , className: 'map-container circle',iconSize: L.point(40, 40)  }); } });
+                return L.divIcon({ html: html , className: 'map-container circle',iconSize: L.point(18, 18)  }); } });
 
         addressPoints.forEach(function(point) {
             var violation = point[7] + point[8] + point[9] + point[10];
